// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component should render services 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "indexPatternTitle": "apm-*",
        "serviceMapEnabled": false,
        "ui": Object {
          "enabled": false,
        },
      },
      "core": Object {
        "chrome": Object {
          "setBreadcrumbs": [Function],
        },
        "http": Object {
          "basePath": Object {
            "prepend": [Function],
          },
        },
        "notifications": Object {
          "toasts": Object {
            "addWarning": [Function],
          },
        },
      },
      "packageInfo": Object {
        "version": "0",
      },
      "plugins": Object {},
    }
  }
>
  <Home
    tab="services"
  />
</ContextProvider>
`;

exports[`Home component should render traces 1`] = `
<ContextProvider
  value={
    Object {
      "config": Object {
        "indexPatternTitle": "apm-*",
        "serviceMapEnabled": false,
        "ui": Object {
          "enabled": false,
        },
      },
      "core": Object {
        "chrome": Object {
          "setBreadcrumbs": [Function],
        },
        "http": Object {
          "basePath": Object {
            "prepend": [Function],
          },
        },
        "notifications": Object {
          "toasts": Object {
            "addWarning": [Function],
          },
        },
      },
      "packageInfo": Object {
        "version": "0",
      },
      "plugins": Object {},
    }
  }
>
  <Home
    tab="traces"
  />
</ContextProvider>
`;
